# BorderBinaryRecognizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: binary.py  main.py
src/config/: config.py  config.yaml
src/scripts/: bind_visitor.py  socket_call_visitor.py
src/test/: test_socket_call_visitor.py
src/utils/: logger.py  utils.py
