[project]
name = "border-binary-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog==6.10.1",
    "ida-domain>=0.3.5",
    "pwntools==4.14.1",
    "pyelftools==0.32",
    "pyyaml==6.0.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
